--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "ng"
   ],
   "author": "JP Richardson",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "~3.1.0"
+  }
 }
