--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "~3.1.0"
+  },
+  "devDependencies": {
+    "testutil": "~0.4.0",
+    "superagent": "~0.12.4"
   }
 }
