--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "testutil": "~0.4.0",
-    "superagent": "~0.12.4"
+    "superagent": "~0.12.4",
+    "reload": "0.0.1"
   }
 }
