--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "author": "JP Richardson",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.1.0"
+    "express": "~3.1.0",
+    "fs-extra": "~0.5.0",
+    "underscore": "~1.4.4"
   },
   "devDependencies": {
     "testutil": "~0.4.0",
     "superagent": "~0.12.4",
-    "reload": "0.0.1"
+    "reload": "0.0.1",
+    "supertest": "~0.5.1",
+    "chai": "~1.5.0"
   }
 }
