--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "express": "~3.1.0",
     "fs-extra": "~0.5.0",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "colors": "~0.6.0-1"
   },
   "devDependencies": {
     "testutil": "~0.4.0",
