--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "~3.1.0",
     "fs-extra": "~0.5.0",
     "underscore": "~1.4.4",
-    "colors": "~0.6.0-1"
+    "colors": "~0.6.0-1",
+    "reload": "0.0.2"
   },
   "devDependencies": {
     "testutil": "~0.4.0",
